--- a/test-output/index.html
+++ b/test-output/index.html
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feedBackTest')
 data.setCell(0, 2, 'com.helpBot.testcases.HelpBotWindowTest')
-data.setCell(0, 3, 21938);
+data.setCell(0, 3, 22542);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -228,12 +228,16 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">load</span>
-                <span class="method-start">18 ms</span>
+                <span class="method-start">23 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">feedBackTest</span>
-                <span class="method-start">4070 ms</span>
+                <span class="method-start">5072 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">27618 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
