--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84f66b">  <td>22/06/10 11:19:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpBotWindowTest.feedBackTest()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@544a2ea6]">feedBackTest</td> 
-  <td>main@322836221</td>   <td></td> </tr>
-<tr bgcolor="6d7074">  <td>22/06/10 11:19:09</td>   <td>-4052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.load()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@544a2ea6]">&gt;&gt;load</td> 
-<td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
-<tr bgcolor="6d7074">  <td>22/06/10 11:19:09</td>   <td>-4068</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@544a2ea6]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@322836221</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>22/06/13 16:35:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpBotWindowTest.feedBackTest()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@eb21112]">feedBackTest</td> 
+  <td>main@336484883</td>   <td></td> </tr>
+<tr bgcolor="d7a775">  <td>22/06/13 16:35:36</td>   <td>-5049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.load()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@eb21112]">&gt;&gt;load</td> 
+<td>&nbsp;</td>  <td>main@336484883</td>   <td></td> </tr>
+<tr bgcolor="d7a775">  <td>22/06/13 16:35:36</td>   <td>-5068</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@eb21112]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@336484883</td>   <td></td> </tr>
+<tr bgcolor="d7a775">  <td>22/06/13 16:36:03</td>   <td>22547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.helpBot.testcases.HelpBotWindowTest@eb21112]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@336484883</td>   <td></td> </tr>
 </table>
